--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
+    "firebase-admin": "^10.0.2",
+    "nodemon": "^2.0.15",
     "puppeteer": "^13.1.3",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
